[package]
name = "symbolic-dynamic-filtering"
version = "0.1.0"
edition = "2021"
authors = ["Asok Ray", "Shalabh Gupta"]
license = "Apache-2.0"
description = "Symbolic Dynamic Filtering for real-time anomaly detection and fault prognosis in complex systems"
repository = "https://github.com/pristley/fault-oracle"
readme = "README.md"

[dependencies]
# Numerical computing
ndarray = "0.15"
ndarray-stats = "0.5"
nalgebra = "0.32"

# Signal processing
rustfft = "6.1"
num-complex = "0.4"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Utilities
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bin]]
name = "sdf"
path = "src/main.rs"

[lib]
name = "sdf"
crate-type = ["cdylib", "rlib"]
