[project]
name = "symbolic-dynamic-filtering"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "symbolic_dynamic_filtering._core"
features = ["pyo3/extension-module"]
